tests/errors/sem.invalid-type.bin-logical.or
main :: () -> void {
    x := 6;
    y := 7;
    x and y;
};
